# AdventOfCode

./: .gitignore  create_new_folder.bat  create_new_folder.py  setup.py  temp.txt
2020/Day1/: solution.py
2020/Day11/: solution.py
2020/Day13/: solution.py
2020/Day2/: solution.py
2020/Day3/: solution.py
2020/Day6/: solution.py
2020/Day7/: solution.py
2020/Day8/: solution.py
2021/Day2/: solution.py
2021/Day4/: solution.py
2021/Day5/: solution.py
2021/Day7/: solution.py
2021/Day8/: solution.py
2021/Day9/: solution.py
aoc/: utils.py
aoc/2020/Day10/: solution.py
aoc/2020/Day12/: solution.py
aoc/2020/Day14/: solution.py
aoc/2020/Day15/: solution.py
aoc/2020/Day16/: solution.py
aoc/2020/Day17/: solution.py
aoc/2020/Day18/: solution.py
aoc/2020/Day19/: solution.py
aoc/2020/Day20/: solution.py
aoc/2020/Day4/: solution.py
aoc/2020/Day5/: solution.py
aoc/2020/Day6/: solution.py
aoc/2020/Day9/: solution.py
aoc/2021/Day1/: solution.py
aoc/2021/Day10/: solution.py
aoc/2021/Day11/: solution.py
aoc/2021/Day12/: solution.py
aoc/2021/Day13/: solution.py
aoc/2021/Day14/: solution.py
aoc/2021/Day15/: solution.py
aoc/2021/Day16/: solution.py
aoc/2021/Day17/: entry.txt  solution.py
aoc/2021/Day18/: solution.py
aoc/2021/Day19/: solution.py
aoc/2021/Day2/: solution.py
aoc/2021/Day20/: image.txt  solution.py
aoc/2021/Day21/: solution.py
aoc/2021/Day22/: solution.py
aoc/2021/Day23/: entry.txt  entry2.txt  solution.py
aoc/2021/Day3/: solution.py
aoc/2021/Day6/: solution.py
aoc/2022/Day1/: solution.py
aoc/2022/Day10/: solution.py
aoc/2022/Day11/: solution.py
aoc/2022/Day12/: solution.py
aoc/2022/Day13/: solution.py
aoc/2022/Day14/: solution.py
aoc/2022/Day15/: solution.py
aoc/2022/Day16/: solution.py
aoc/2022/Day17/: solution.py  temp.text
aoc/2022/Day18/: solution.py
aoc/2022/Day19/: solution.py
aoc/2022/Day2/: solution.py
aoc/2022/Day20/: solution.py
aoc/2022/Day21/: solution.py
aoc/2022/Day22/: solution.py
aoc/2022/Day23/: solution.py
aoc/2022/Day24/: solution.py
aoc/2022/Day25/: solution.py
aoc/2022/Day3/: solution.py
aoc/2022/Day4/: solution.py
aoc/2022/Day5/: solution.py
aoc/2022/Day6/: solution.py
aoc/2022/Day7/: solution.py
aoc/2022/Day8/: solution.py
aoc/2022/Day9/: solution.py
aoc/2023/Day01/: solution.py
aoc/2023/Day02/: solution.py
aoc/2023/Day03/: solution.py  temp.txt
aoc/2023/Day04/: solution.py
aoc/2023/Day05/: solution.py
aoc/2023/Day06/: solution.py
aoc/2023/Day07/: solution.py
aoc/2023/Day08/: solution.py
aoc/2023/Day09/: solution.py
aoc/2023/Day10/: solution.py
aoc/2023/Day11/: solution.py
aoc/2023/Day12/: solution.py
aoc/2023/Day13/: solution.py
aoc/2023/Day14/: solution.py
aoc/2023/Day15/: solution.py
aoc/2023/Day16/: solution.py
aoc/2023/Day17/: solution.py
aoc/2023/Day18/: solution.py
aoc/2023/Day19/: solution.py
aoc/2023/Day20/: solution.py
aoc/2023/Day21/: solution.py
aoc/2023/Day23/: solution.py
aoc/2023/Day24/: solution.py
aoc/2024/Day1/: solution.py
aoc/2024/Day10/: solution.py
aoc/2024/Day11/: solution.py
aoc/2024/Day12/: solution.py
aoc/2024/Day13/: solution.py
aoc/2024/Day14/: solution.py
aoc/2024/Day15/: solution.py
aoc/2024/Day16/: solution.py
aoc/2024/Day17/: solution.py
aoc/2024/Day18/: solution.py
aoc/2024/Day19/: solution.py
aoc/2024/Day2/: solution.py
aoc/2024/Day20/: solution.py
aoc/2024/Day21/: solution.py
aoc/2024/Day22/: solution.py
aoc/2024/Day23/: solution.py
aoc/2024/Day24/: solution.py
aoc/2024/Day25/: solution.py
aoc/2024/Day3/: solution.py
aoc/2024/Day4/: solution.py
aoc/2024/Day5/: solution.py
aoc/2024/Day6/: solution.py
aoc/2024/Day7/: solution.py
aoc/2024/Day8/: solution.py
aoc/2024/Day9/: solution.py
aoc/2025/Day1/: solution.py
aoc/2025/Day10/: solution.py
aoc/2025/Day11/: solution.py
aoc/2025/Day12/: solution.py
aoc/2025/Day2/: solution.py
aoc/2025/Day3/: solution.py
aoc/2025/Day4/: solution.py
aoc/2025/Day5/: solution.py
aoc/2025/Day6/: solution.py
aoc/2025/Day7/: solution.py
aoc/2025/Day8/: solution.py
aoc/2025/Day9/: solution.py
aoc/common/: astar.py  bitset.py  direction.py  grid.py  multithread.py  parse_entry.py  point.py  range.py  utils.py  vector.py
cpp/: CMakeLists.txt
cpp/2015/: CMakeLists.txt  main.cpp
cpp/common/: CMakeLists.txt
cpp/common/include/: comparison.h  log.h  parser.h  path_utils.h  split.h
cpp/common/include/hash/: md5.h
cpp/common/include/maths/: point.h
cpp/common/src/: parser.cpp  split.cpp
cpp/generator/: generate_solution.py
cpp/solutions/: CMakeLists.txt
cpp/solutions/2015/Day01/: entry.h  solution.cpp  solution_2015_Day01.cpp
cpp/solutions/2015/Day02/: solution_2015_Day02.cpp
cpp/solutions/2015/Day03/: solution_2015_03.cpp
cpp/solutions/2015/Day04/: solution_2015_04.cpp
cpp/solutions/2015/Day05/: solution_2015_05.cpp
cpp/solutions/common/: test_case.cpp  test_case.h
cpp/tests_common/: CMakeLists.txt  main.cpp  tests_parser.cpp  tests_paths.cpp  tests_split.cpp
cpp/tests_common/data/: simple_file.txt
cpp/tests_common/utils/: utils.cpp  utils.h
everybody_codes/: create_new_folder.py
everybody_codes/2024/Quest1/: entry.txt  solution.py
everybody_codes/2024/Quest2/: entry.txt  example.txt  solution.py
everybody_codes/2024/Quest3/: entry.txt  example.txt  solution.py
everybody_codes/2024/Quest4/: entry.txt  example.txt  solution.py
everybody_codes/2024/Quest5/: entry.txt  example.txt  solution.py
(+18 files in other folders)
